Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ stages:
         goals: 'test'
 
 - stage: Package
-  displayName: Compile Sources
+  displayName: Package
   jobs:
   - job: Package
     displayName: Package
